--- a/j23-4.css
+++ b/j23-4.css
@@ -241,6 +241,7 @@ article>* {         /* 第一子層 */
 .lightbox > img {
   width: 55%;
   float: right;
+  filter: drop-shadow(0px 0px 30px blue);
 }
 .lightbox:target {
   z-index: 1;   /* 被點到者 則顯示 */
